MDEV-5787 Server crashes in in row_mysql_convert_row_to_innobase on CREATE .. SELECT

XtraDB: don't accept MYSQL_TYPE_NULL as a column type